[gd_scene load_steps=9 format=3 uid="uid://bxts30b442841"]

[ext_resource type="Script" uid="uid://b1sls6bfes6t" path="res://menus/calibration_end_menu.gd" id="1_kpdw4"]
[ext_resource type="FontFile" uid="uid://mmt3ntbg5e3r" path="res://assets/SpaceGrotesk-Bold.ttf" id="2_kpqth"]
[ext_resource type="StyleBox" uid="uid://0fah7ib3txpx" path="res://styles/style_box_bg.tres" id="2_mjo6t"]
[ext_resource type="Theme" uid="uid://bow1via2pq7jw" path="res://styles/theme.tres" id="3_pybip"]
[ext_resource type="StyleBox" uid="uid://2lwsuoxnt6ca" path="res://styles/style_box_title.tres" id="5_lm67l"]

[sub_resource type="LabelSettings" id="LabelSettings_i5a8q"]
font_size = 100
font_color = Color(0.07450981, 0.07450981, 0.07450981, 1)

[sub_resource type="LabelSettings" id="LabelSettings_l2njh"]
line_spacing = -25.0
font_size = 32
font_color = Color(0.07450981, 0.07450981, 0.07450981, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bpxhh"]
font_size = 40
font_color = Color(0.07450981, 0.07450981, 0.07450981, 1)

[node name="calibrationEndMenu" type="Node2D"]
script = ExtResource("1_kpdw4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="background" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_mjo6t")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -148.0
offset_right = 256.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_pybip")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
theme = ExtResource("3_pybip")
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 88
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 26

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="offsetContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="offsetAmtContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/offsetContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="offsetAmt" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/offsetContainer/offsetAmtContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_pybip")
theme_override_fonts/font = ExtResource("2_kpqth")
text = "999.999"
label_settings = SubResource("LabelSettings_i5a8q")
horizontal_alignment = 1

[node name="offsetLabelms" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/offsetContainer/offsetAmtContainer"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("3_pybip")
text = "ms
"
label_settings = SubResource("LabelSettings_l2njh")
horizontal_alignment = 1

[node name="buttonsContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_constants/separation = 40

[node name="menuButton" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/buttonsContainer"]
layout_mode = 2
theme = ExtResource("3_pybip")
theme_override_font_sizes/font_size = 40
text = "  OK  "

[node name="cancelButton" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/buttonsContainer"]
layout_mode = 2
theme = ExtResource("3_pybip")
theme_override_font_sizes/font_size = 40
text = "  Cancel  "

[node name="PanelContainer2" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -148.0
offset_right = 256.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_pybip")
theme_override_styles/panel = ExtResource("5_lm67l")

[node name="offsetLabel" type="Label" parent="CanvasLayer/PanelContainer2"]
layout_mode = 2
theme = ExtResource("3_pybip")
text = "New Input Offset:"
label_settings = SubResource("LabelSettings_bpxhh")
horizontal_alignment = 1

[connection signal="button_up" from="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/buttonsContainer/menuButton" to="." method="_on_menu_button_button_up"]
[connection signal="button_up" from="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/buttonsContainer/cancelButton" to="." method="_on_cancel_button_button_up"]
